Attempt to fix fake window overflowing

--- a/css/fake-windows-styles.css
+++ b/css/fake-windows-styles.css
@@ -54,6 +54,7 @@
   text-align: center;
   -webkit-user-select: none;
   user-select: none;
+  overflow-y: hidden;
 }
 .window-content textarea {
   width: 410px;
